--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,6 @@ dependencies {
     compile 'com.google.android.gms:play-services:10.0.1'
     compile 'com.makeramen:roundedimageview:2.3.0'
     compile 'com.android.support:cardview-v7:25.1.1'
-
+    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     testCompile 'junit:junit:4.12'
 }
