--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,10 +30,15 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    compile 'com.android.support:cardview-v7:25.1.1'
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.google.android.gms:play-services:10.0.1'
     compile 'com.makeramen:roundedimageview:2.3.0'
-    compile 'com.android.support:cardview-v7:25.1.1'
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
+    compile 'com.google.android.gms:play-services-places:10.0.1'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
     testCompile 'junit:junit:4.12'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
