--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+    compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.makeramen:roundedimageview:2.3.0'
+    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.google.android.gms:play-services:10.2.1'
     compile 'com.makeramen:roundedimageview:2.3.0'
@@ -38,15 +41,14 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:10.2.1'
     compile 'com.android.support:mediarouter-v7:25.3.1'
     compile 'com.github.paolorotolo:appintro:4.1.0'
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.makeramen:roundedimageview:2.3.0'
-    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     compile 'com.google.android.gms:play-services-places:10.2.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.android.gms:play-services-maps:10.2.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile 'com.google.firebase:firebase-database:10.0.1'
     testCompile 'junit:junit:4.12'
 }
+
 
 apply plugin: 'com.google.gms.google-services'
