--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.firebaseui:firebase-ui:0.4.3'
     compile 'com.google.firebase:firebase-crash:10.2.1'
+    compile 'com.google.firebase:firebase-storage:10.2.1'
     testCompile 'junit:junit:4.12'
 }
 
