--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,12 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:largeHeap="true"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".SignUpActivity" />
         <!--
@@ -42,7 +40,6 @@
             android:name=".EventDetailsActivity"
             android:label="Details" />
         <activity android:name=".ChatActivity" />
-
         <activity android:name=".ProfileActivity" />
         <activity android:name=".EventActivity" />
         <activity android:name=".LoginActivity">
@@ -53,8 +50,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".IntroActivity" />
-        <activity android:name=".AboutActivity"/>
-
+        <activity android:name=".AboutActivity" />
+        <activity android:name=".DevNavigation"></activity>
     </application>
 
 </manifest>
