--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-
+    compile 'com.google.code.gson:gson:2.8.0'
     compile 'com.makeramen:roundedimageview:2.3.0'
     compile 'uk.co.chrisjenx:calligraphy:2.2.0'
     compile 'com.makeramen:roundedimageview:2.3.0'
