--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,8 @@
         <activity android:name=".IntroActivity" />
         <activity android:name=".AboutActivity" />
         <activity android:name=".MainActivity"
-            android:label="Who&apos;s Up">
+            android:label="Who&apos;s Up"
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
